<resources>
    <string name="RainViewer">Rain Radar</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_github"><a href="https://github.com/woheller69/spritpreise">Github-Repo</a></string>
    <string name="about_license">License</string>
    <string name="about_license_text">This application is derived from Privacy Friendly Weather, developed by the research group SECUSO. Source code licensed under GPLv3. The app uses icons from Google Material Design Icons licensed under Apache License Version 2.0, Android Volley which is licensed under Apache License Version 2.0, AndroidX libraries which is licensed under Apache License Version 2.0, and AutoSuggestTextViewAPICall which is licensed under Apache License Version 2.0</string>
    <string name="about_more_info">More information can be found on:</string>
    <string name="about_permission_internet_description">Connecting to the Network: This permission is needed because data is retrieved by making requests to servers on the Internet. Without this permission, no price information can be received. Optional: authorization for GPS.</string>
    <string name="about_permissions">Permissions</string>
    <string name="about_privacy_answer">Gas Prices only uses the permission \"Internet\" to retrieve price data. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="about_privacy_heading">Privacy Info</string>
    <string name="about_tankerkoenig"><a href="https://creativecommons.tankerkoenig.de/">Tankerkönig</a></string>
    <string name="about_where_from">Where does the information come from?</string>
    <string name="about_where_from_answer">Price information is fetched from</string>
    <string name="action_position">Update Location</string>
    <string name="action_rainviewer">Rain Viewer</string>
    <string name="action_refresh">Refresh</string>
    <string name="activity_about">About</string>
    <string name="activity_gasprices">Gas Prices</string>
    <string name="activity_manage">Manage locations</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_settings_title">Settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Gas Prices</string>
    <string name="app_name_long">Gas Prices Germany</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="card_error_content">Please try to update!</string>
    <string name="card_stations_heading">Last update</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="closed">Closed</string>
    <string name="copy">Copy</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="dialog_NO_button">No</string>
    <string name="dialog_OK_button">OK</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub or buy the developer a coffee via PayPal.</string>
    <string name="dialog_add_add_button">Add</string>
    <string name="dialog_add_close_button">Close</string>
    <string name="dialog_add_label">Enter the location to add:</string>
    <string name="dialog_add_no_city_found">No location was found that matches your input. It is recommended to select one of the items from the dropdown list.</string>
    <string name="dialog_edit_change_button">Modify</string>
    <string name="dialog_edit_label">CAUTION: This will modify the internal city list!</string>
    <string name="edit_location_hint_ID">ID</string>
    <string name="edit_location_hint_name">Name</string>
    <string name="error_convert_to_json">The retrieved data was not well-formed.</string>
    <string name="error_fetch_stations">Error retrieving data, please try again! Check your API-key!</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_no_city_selected">There is no city selected. To select a city go to \"Manage locations\".</string>
    <string name="error_no_gps">Please turn on GPS</string>
    <string name="error_no_internet">Your Device is not connected to the Internet</string>
    <string name="error_no_map_app">No map application installed</string>
    <string name="error_no_position">No position available</string>
    <string name="error_no_radius_search_result">No city found. Increase search radius</string>
    <string name="error_no_station_found">No station found</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label">Label</string>
    <string name="long_press_text">Hold and drag to sort.</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="preferred_brands">Preferred brands (comma separated)</string>
    <string name="registerTKbutton">Register for free</string>
    <string name="settings_GPS_manual">Manual update only</string>
    <string name="settings_GPS_position">Allow GPS usage</string>
    <string name="settings_GPS_summary">Allow usage of current GPS position in first TAB and in the widget. Position update is triggered automatically by widget.</string>
    <string name="settings__API_key_default" />
    <string name="settings_darkmode">Android 10+ Dark Mode</string>
    <string name="settings_description_API">Gas Prices receives data from the free service of tankerkoenig.de. Please enter your own API key</string>
    <string name="settings_position">Position</string>
    <string name="settings_search_radius">Search radius</string>
    <string name="settings_sort">Sort by price</string>
    <string name="settings_sort_summary">Only if single type selected</string>
    <string name="settings_time24h">24-hour format</string>
    <string name="settings_title_API">API Key</string>
    <string name="settings_title_API_key">Enter API Key</string>
    <string name="settings_title_display_options">Display options</string>
    <string name="settings_type">Type</string>
    <string name="settings_update_interval">Update interval</string>
    <string name="summary_time24h">Override system setting</string>
    <string name="version_number">Version</string>
</resources>