<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/nav_group_main" android:checkableBehavior="all">
        <item android:icon="@drawable/ic_local_gas_station_black_24dp" android:id="@id/nav_gasprices" android:title="@string/activity_gasprices" />
        <item android:icon="@drawable/ic_edit_location_24px" android:id="@id/nav_manage" android:title="@string/activity_manage" />
    </group>
    <group android:id="@id/nav_group_add" android:checkableBehavior="all">
        <item android:icon="@drawable/ic_settings_24px" android:id="@id/nav_settings" android:title="@string/activity_settings" />
        <item android:icon="@drawable/ic_info_24px" android:id="@id/nav_about" android:title="@string/activity_about" />
        <item android:icon="@drawable/baseline_star_rate_24" android:id="@id/star_on_github" android:title="Star on GitHub" />
    </group>
</menu>